# rarust

./: .gitignore  Cargo.toml  OPTIMIZATION.md  clippy.toml  final.md  lessons.md  plan.md  spec.md  test.md  todos.md  uidesign.md
.github/workflows/: ci.yml
Coding-Improve-Team-v1/: AGENTS.md  CHANGELOG.md  FAILURE_LOG.md  LICENSE  README.md  TEAM.md  lessons.md  manifest.json  opencode.jsonc  usage.md
Coding-Improve-Team-v1/docs/: CODEX_DESKTOP_SETUP.md  MIGRATION.md  OPENCODE_SETUP.md
Coding-Improve-Team-v1/examples/: example-bugfix-final.md  example-project-folder.md  example-task.md
Coding-Improve-Team-v1/policies/: dependency-policy.md  evidence-and-testing.md  git-safety.md  no-large-rewrite.md  permissions-automation.md  project-boundaries.md  rollback-policy.md  secrets-and-security.md  self-improvement-policy.md
Coding-Improve-Team-v1/roles/: architect.md  bug-hunter.md  ci-release-engineer.md  code-reviewer.md  documentation-writer.md  implementer.md  orchestrator.md  performance-engineer.md  refactorer.md  requirements-analyst.md  security-reviewer.md  self-improvement-coach.md  test-engineer.md
Coding-Improve-Team-v1/scripts/: format-markdown.ps1  new-task.ps1  validate.ps1  validate.py
Coding-Improve-Team-v1/templates/: bug-report.md  code-review-report.md  final.md  plan.md  release-note.md  risk-register.md  spec.md  task-card.md  test.md  todos.md  validation-report.md
Coding-Improve-Team-v1/tests/: README.md
Coding-Improve-Team-v1/workflows/: bugfix-debugging.md  code-review-loop.md  controlled-coding-loop.md  (+8 more)
rarust/: Cargo.toml  build.rs
rarust-core/: Cargo.toml
rarust-core/src/: archive.rs  encryption.rs  entry.rs  error.rs  lib.rs  multi.rs  util.rs
rarust-core/tests/: create_test.rs  header_encrypt_test.rs  portable_archive.rs  read_extract.rs
rarust/assets/icons/: app-16.rgba  app-256.rgba  app-32.rgba  close-16.rgba  close-256.rgba  close-32.rgba  create-16.rgba  create-256.rgba  create-32.rgba  extract-16.rgba  extract-256.rgba  extract-32.rgba  file-16.rgba  file-256.rgba  file-32.rgba  folder-16.rgba  folder-256.rgba  folder-32.rgba  open-16.rgba  open-256.rgba  open-32.rgba  password-16.rgba  password-256.rgba  password-32.rgba  preview-16.rgba  preview-256.rgba  preview-32.rgba  refresh-16.rgba  refresh-256.rgba  refresh-32.rgba  tab-16.rgba  tab-256.rgba  tab-32.rgba  test-16.rgba  test-256.rgba  test-32.rgba
rarust/src/: cli.rs  lib.rs  main.rs  password.rs
rarust/src/commands/: benchmark.rs  create.rs  extract.rs  list.rs  mod.rs  progress.rs  repair.rs  test.rs
rarust/src/gui/: app.rs  fonts.rs  i18n.rs  icons.rs  jobs.rs  mod.rs  theme.rs
rarust/src/gui/actions/: create_dialog.rs  mod.rs
rarust/src/gui/widgets/: mod.rs  password.rs  preview.rs  progress.rs  tab_bar.rs
rarust/tests/: cli_smoke.rs
scripts/: build-release.ps1  generate_icons.py
(+14 files in other folders)
