[package]
name = "rarust-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Rarust — high-level RAR archive API wrapping rars"

[lints]
rust.unsafe_code = "deny"

[dependencies]
# RAR backend
rars = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Filesystem
walkdir = "2.5"
dunce = "1.0"

# Security
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# Pattern matching (for multi-volume detection)
regex-lite = "0.1"

# Optional
rayon = { version = "1.10", optional = true }

[features]
default = ["parallel"]
parallel = ["rayon"]

[dev-dependencies]
tempfile = "3.0"
