[package]
name = "rarust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A modern, pure Rust RAR command-line tool"

[dependencies]
rarust-core = { path = "../rarust-core" }

# CLI framework
clap = { version = "4.6", features = ["derive", "env", "unicode"] }

# Error handling
anyhow = "1.0"

# Output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.21"
anstream = "0.6"

# Progress
indicatif = "0.18"

# Filesystem
walkdir = "2.5"
dunce = "1.0"

# Optional
rayon = { version = "1.10", optional = true }
ratatui = { version = "0.30", optional = true, features = ["crossterm"] }

[features]
default = ["parallel"]
parallel = ["rayon"]
tui = ["ratatui"]

[dev-dependencies]
rars = "0.4"
tempfile = "3.0"

