[package]
name = "rarust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A modern, pure Rust RAR command-line tool"

[lib]
name = "rarust"
path = "src/lib.rs"

[[bin]]
name = "rarust"
path = "src/main.rs"

[[bin]]
name = "rarust-gui"
path = "src/bin/rarust-gui.rs"
required-features = ["gui"]

[dependencies]
rarust-core = { path = "../rarust-core" }

# CLI framework
clap = { version = "4.6", features = ["derive", "env", "unicode"] }

# Error handling
anyhow = "1.0"

# Output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.21"
anstream = "0.6"

# Progress
indicatif = "0.18"

# System
dirs = "6.0"

# Filesystem
walkdir = "2.5"
dunce = "1.0"

# Optional
rayon = { version = "1.10", optional = true }
ratatui = { version = "0.30", optional = true, features = ["crossterm"] }
eframe = { version = "0.35", optional = true, default-features = true }
egui = { version = "0.35", optional = true }
rfd = { version = "0.16", optional = true }

[features]
default = ["parallel", "gui"]
parallel = ["rayon"]
tui = ["ratatui"]
gui = ["eframe", "egui", "rfd"]

[dev-dependencies]
rars = "0.4"
tempfile = "3.0"

